tests/build/fail/unit.rs
use ref_split::*;

#[ref_split(ref(MyStructRef))]
struct MyStruct;

fn main() {}